# fast-loaded-dice-roller

./: .gitignore
src/cpp/: CMakeLists.txt  fldr.hpp  linear_congruential_generator.hpp  unit_tests_fldr.cpp
